add sequence similar to meet

--- a/content/05_frombase10.html
+++ b/content/05_frombase10.html
@@ -95,7 +95,7 @@
 <p>Fill in the series:</p>
 <li class="expression series vspace1" len=12 exp="_prn(n+1,4)" hints=[0,1,4,11] ></li> 
 <li class="expression series vspace1" len=12 exp="_prn(14-n,3)" hints=[0,1,2,5,11] ></li> 
-<li class="expression series vspace1" len=8 exp="_prn(2*n+2,2)" hints=[0,1,2,7] blank=8></li> 
+<li class="expression series vspace1" len=5 exp="_prn(6*n+6,5)" hints=[0,1,2] ></li> 
 
 <p >Calculate the exponent:</p>
 
