--- a/content/meet_2007_1.html
+++ b/content/meet_2007_1.html
@@ -34,7 +34,7 @@
   <ol>
     <li class="expression" blank=8 baseFormat=simple exp="_prn(20,4)"></li>
     <li class="expression" blank=8 exp="_prn( val('2301_8') - val('777_8') + val('515_8') , 8)"></li>
-    <li class="expression" blank=8 baseFormat=alpha exp="_prn(2017,2)"></li>
+    <li class="expression" blank=8 baseFormat=alpha exp="_prn(val('2017_9'),2)"></li>
   </ol>
 </div>
 
