--- a/content/04_littleboxes.html
+++ b/content/04_littleboxes.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: Little Boxes</h1>
+<h1>Devotion Math League Bases 4: Little Boxes</h1>
 
 <table class="student-info"></table>
 <div class="main">
@@ -39,7 +39,7 @@
 <span class="expression" 
   exp="_prn(4) \times _prn(10) + _prn(7) \times _prn(1) = _prn(47)"></span></p>
 
-<p>How about this:</p>
+<p class="page-break">How about this:</p>
 <p class="grids" num="152_10"></p>
 <p class="indent1">How many boxes? <span class="expression" exp="_prn(152)"></span></p>
 <p class="indent1">Write the equation for the number of boxes:
