--- a/content/meet_2007_1.html
+++ b/content/meet_2007_1.html
@@ -12,21 +12,21 @@
 
 <body>
 
-<h1>Devotion Math League 2007: Meet 1</h1>
+<h1>Devotion Math League 2017: Meet 1</h1>
 <table class="student-info"></table>
 
 <div class="content main">
   <p>1) What is the next number in this base four sequence?</p>
   <p class="expression series vspace1 indent2" 
      baseFormat=simple len=4 exp="_prn(5*n+5,4)" hints=[0,1,2] ></p> 
+  <p class="vspace3">
 
-  <br><br><br><br>
-  <p class="vspace2"> 2) Evaluate:  \( 2301_{(8)} – 777_{(8)} + 515_{(8)} \) </p>
+  <p> 2) Evaluate:  \( 2301_{(8)} – 777_{(8)} + 515_{(8)} \) </p>
+  <p class="vspace3">
 
-  <br><br><br><br><br>
-  <p class="vspace2"> 3) Convert to base two: \( 2017_{nine} \) </p>
+  <p> 3) Convert to base two: \( 2017_{nine} \) </p>
+  <p class="vspace3">
 
-  <br><br><br><br><br>
 </div>
 
 <div class="meet-answers main">
