--- a/content/meet_2013_1.html
+++ b/content/meet_2013_1.html
@@ -17,13 +17,13 @@
 
 <div class="content main">
   <p>1) How many times bigger is \( 100_6 \) than \( 20_9 \) ?</p>
-  <p class="vspace3">
+  <p class="vspace3"></p>
 
   <p> 2) Evaluate:  \( 1010101_{(2)} - 1001010_{(2)} \) </p>
-  <p class="vspace3">
+  <p class="vspace3"></p>
 
   <p> 3) Convert to base 5: \( 4321_{(eight)} \) </p>
-  <p class="vspace2">
+  <p class="vspace2"></p>
 
 </div>
 
@@ -32,7 +32,7 @@
   <ol>
     <li class="expression" blank=8 exp="_prn( val('100_6') / val('20_9') )"></li>
     <li class="expression" blank=8 exp="_prn( val('1010101_2') - val('1001010_2') , 2)"></li>
-    <li class="expression" blank=8 exp="_prn( val('4321_8') , 5)"></li>
+    <li class="expression" blank=8 exp="_prn( '4321_8' , 5)"></li>
   </ol>
 </div>
 
