--- a/content/meet_2017_1.html
+++ b/content/meet_2017_1.html
@@ -19,22 +19,22 @@
   <p>1) What is the next number in this base four sequence?</p>
   <p class="expression series vspace1 indent2" 
      baseFormat=simple len=4 exp="_prn(5*n+5,4)" hints=[0,1,2] ></p> 
-  <p class="vspace3">
+  <p class="vspace3"></p>
 
   <p> 2) Evaluate:  \( 2301_{(8)} – 777_{(8)} + 515_{(8)} \) </p>
-  <p class="vspace3">
+  <p class="vspace3"></p>
 
   <p> 3) Convert to base two: \( 2017_{nine} \) </p>
-  <p class="vspace3">
+  <p class="vspace2"></p>
 
 </div>
 
 <div class="meet-answers main">
   <strong>Answers:</strong>
   <ol>
-    <li class="expression" blank=8 baseFormat=simple exp="_prn(20,4)"></li>
+    <li class="expression" blank=8 baseFormat=simple exp="_prn(20 , 4)"></li>
     <li class="expression" blank=8 exp="_prn( val('2301_8') - val('777_8') + val('515_8') , 8)"></li>
-    <li class="expression" blank=8 baseFormat=alpha exp="_prn(val('2017_9'),2)"></li>
+    <li class="expression" blank=8 baseFormat=alpha exp="_prn('2017_9' , 2)"></li>
   </ol>
 </div>
 
