hanging indent to make word problems look better

--- a/content/meet_1998_2.html
+++ b/content/meet_1998_2.html
@@ -22,7 +22,7 @@
   <p> 2) \( 3544_{six} = \text{__________}_{four} \) </p>
   <p class="vspace3"></p>
 
-  <p> 3) A person worked \( 62_{seven} \) days, earning $\( 110,010_{two} \) each day. What is his total earnings expressed in base ten? </p> 
+  <p class="hang"> 3) A person worked \( 62_{seven} \) days, earning $\( 110,010_{two} \) each day. What is his total earnings expressed in base ten? </p> 
   <p class="vspace2"></p>
 
 </div>
