--- a/content/meet_2002_2.html
+++ b/content/meet_2002_2.html
@@ -22,7 +22,7 @@
   <p>2) \( 142_7 \cdot 26_7 \) </p>
   <p class="vspace3"></p>
 
-  <p> 3) A person worked \( 1010_2 \) days, earning $\( 10120_3 \) per day. What is this person's total earnings for this period of time? Express your answer in base 2.</p> 
+  <p class="hang"> 3) A person worked \( 1010_2 \) days, earning $\( 10120_3 \) per day. What is this person's total earnings for this period of time? Express your answer in base 2.</p> 
   <p class="vspace2"></p>
 
 </div>
