--- a/content/meet_2003_2.html
+++ b/content/meet_2003_2.html
@@ -24,7 +24,7 @@
   <p> \( 4035 - 510 =  3325 \) </p>
   <p class="vspace3"></p>
 
-  <p> 3) There are \( 1100_4 \) cookies in a box. Each cookie contains \( 110_3 \) grams of fat. What is the total number of grams of fat contained in the box? Express your answer in base 7.</p> 
+  <p class="hang"> 3) There are \( 1100_4 \) cookies in a box. Each cookie contains \( 110_3 \) grams of fat. What is the total number of grams of fat contained in the box? Express your answer in base 7.</p> 
   <p class="vspace2"></p>
 
 </div>
