--- a/content/meet_2005_2.html
+++ b/content/meet_2005_2.html
@@ -22,9 +22,11 @@
   <p> 2) \( 10625_7 = \text{__________}_{10} \) </p>
   <p class="vspace3"></p>
 
-  <p> 3) (In the following problem, \( \Sigma \Omega \) is a two-digit number) </p> 
-  <p> \( (\Sigma \Omega)_3 +  (\Sigma \Omega)_3 = (\Sigma \Omega)_8 \) </p> 
-  <p> What digit can go in for each symbol to make the above problem work? </p> 
+  <p class="hang"> 3) (In the following problem, \( \Sigma \Omega \) is a two-digit number)
+    <br><br>  
+    \( (\Sigma \Omega)_3 +  (\Sigma \Omega)_3 = (\Sigma \Omega)_8 \) 
+    <br><br> 
+    What digit can go in for each symbol to make the above problem work? </p> 
   <p class="vspace2"></p>
 
 </div>
