--- a/content/meet_2001_2.html
+++ b/content/meet_2001_2.html
@@ -23,7 +23,7 @@
   <p> 2) \( 1121_5 \times 443_5 = \text{__________}_5 \) </p>
   <p class="vspace3"></p>
 
-  <p> 3) A worker earns double her hourly rate of pay when she works overtime. If she works \( 101000_2 \) regular hours at a pay rate of \( 1111_2 \) and \( 1001_2 \) overtime hours, what is her total pay during this period? Express your answer in base 2.</p> 
+  <p class="hang"> 3) A worker earns double her hourly rate of pay when she works overtime. If she works \( 101000_2 \) regular hours at a pay rate of \( 1111_2 \) and \( 1001_2 \) overtime hours, what is her total pay during this period? Express your answer in base 2.</p> 
   <p class="vspace2"></p>
 
 </div>
