add subtraction, mixed problems, challenge problems refined

--- a/content/addition.html
+++ b/content/addition.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: Addition</h1>
+<h1>Devotion Math League Bases: Addition and Subtraction</h1>
 
 <table class="student-info"></table>
 <div class="main">
@@ -32,7 +32,7 @@ In other Bases, the easy problems are exactly the same:
 <p class="expression indent1" exp="longadd(['31_8', '123_8', '410_8'], 8)"></p>
 
 <p>The "carry one" rule happens in other bases too. How do you solve this:</p>
-<p class="expression indent1" exp="prn(3, 5) + prn(3, 5) = ?"></p>
+<p class="expression indent1" exp="prn(3, 5) + prn(3, 5) = _prn(6, 5)"></p>
 <p>There is no "6" in Base 5. So the answer must be \( 11_{(5)} \).</p>
 
 <p>Here is a two digit Base 5 addition, where you "carry the one" from the 
@@ -41,7 +41,7 @@ In other Bases, the easy problems are exactly the same:
 \( \begin{align} 1 \phantom{0_{(5)}} \\ 13_{(5)} \\ \underline{+ \quad 23_{(5)}} \\ 41_{(5)} \end{align} \)
 </p>
 
-<p>Try one yourself. This one has two carries.</p>
+<p class="page-break">Try one yourself. This one has two carries.</p>
 <p class="expression indent1" exp="longadd(['123_5', '124_5'], 5)"></p>
 
 <h2>Practice</h2>
@@ -50,46 +50,78 @@ In other Bases, the easy problems are exactly the same:
 
 <table style='width:100%'><tr>
 <td><p class="expression" exp="longadd([13, 6], 5)"></p></td>
-<td><p class="expression" exp="longadd([12, 9], 5)"></p></td>
-<td><p class="expression" exp="longadd(['134_5', '143_5'], 5)"></p></td>
-<td><p class="expression" exp="longadd(['124_5', '434_5'], 5)"></p></td>
+<td><p class="expression" exp="longadd([15, 9], 6)"></p></td>
+<td><p class="expression" exp="longadd([53, 265], 7)"></p></td>
+<td><p class="expression" exp="longadd([53, 378], 8)"></p></td>
 </tr><tr>
 <td><p class="expression" exp="longadd([15, 10], 4)"></p></td>
-<td><p class="expression" exp="longadd([25, 14], 4)"></p></td>
-<td><p class="expression" exp="longadd([45, 37], 4)"></p></td>
-<td><p class="expression" exp="longadd([59, 47], 4)"></p></td>
-</tr><tr>
-<td><p class="expression" exp="longadd([28, 20], 6)"></p></td>
-<td><p class="expression" exp="longadd([35, 14], 6)"></p></td>
-<td><p class="expression" exp="longadd([45, 37], 7)"></p></td>
-<td><p class="expression" exp="longadd([59, 48], 7)"></p></td>
+<td><p class="expression" exp="longadd([24, 14], 5)"></p></td>
+<td><p class="expression" exp="longadd([55, 97], 6)"></p></td>
+<td><p class="expression" exp="longadd([159, 244], 7)"></p></td>
 </tr></table>
 
 <p>Lots of digits in low bases</p>
 
 <table style='width:100%'><tr>
 <td><p class="expression" exp="longadd([6, 13], 2)"></p></td>
-<td><p class="expression" exp="longadd([12, 9], 2)"></p></td>
-<td><p class="expression" exp="longadd([15, 13], 2)"></p></td>
-<td><p class="expression" exp="longadd([37, 52], 2)"></p></td>
-</tr><tr>
-<td><p class="expression" exp="longadd([17, 10], 3)"></p></td>
 <td><p class="expression" exp="longadd([26, 26], 3)"></p></td>
-<td><p class="expression" exp="longadd([49, 37], 3)"></p></td>
+<td><p class="expression" exp="longadd([15, 13], 2)"></p></td>
 <td><p class="expression" exp="longadd([89, 147], 3)"></p></td>
 </tr></table>
+
+<h2>Subtraction</h2>
+
+<p>In subtraction, it can also be easy:</p>
+<td><p class="expression" exp="longsub([13, 6], 5)"></p></td>
+
+<p>But sometimes you have to "borrow a one" from the next digit. Example:</p>
+<td><p class="expression" exp="longsub([11, 8], 5)"></p></td>
+
+<p>You "borrow a one" from the 2, which is worth 5 (since we are in Base 5).</p>
+<p>Then, \(5 + 1 = 6\). And \(6 - 3 = 3\).</p>
+
+
+<h2>Subtraction Practice</h2>
+
+<table style='width:100%'><tr>
+<td><p class="expression" exp="longsub([13, 6], 4)"></p></td>
+<td><p class="expression" exp="longsub([15, 9], 6)"></p></td>
+<td><p class="expression" exp="longsub([265, 53], 8)"></p></td>
+<td><p class="expression" exp="longsub([378, 62], 9)"></p></td>
+</tr><tr>
+<td><p class="expression" exp="longsub([25, 10], 5)"></p></td>
+<td><p class="expression" exp="longsub([25, 10], 4)"></p></td>
+<td><p class="expression" exp="longsub([30, 14], 3)"></p></td>
+<td><p class="expression" exp="longsub([29, 18], 2)"></p></td>
+</tr></table>
+
+
+<h2>Mixed Operations Practice</h2>
+
+<p class="expression vspace2" vars="x=20; y=6; z=9; b=5;" 
+   exp="prn(x,b) - prn(y,b) + prn(z,b) = _prn(x-y+z,b)"></p>
+
+<p class="expression vspace2" vars="x=20; y=10; z=6; b=3;" 
+   exp="prn(x,b) - prn(y,b) - prn(z,b) = _prn(x-y-z,b)"></p>
+
+<p class="expression vspace2" vars="x=47; y=35; z=3; b=8;" 
+   exp="prn(x,b) + prn(y,b) - prn(z,b) = _prn(x+y-z,b)"></p>
+
+<p class="expression vspace2" vars="x=50; y=35; z=18; b=6;" 
+   exp="prn(x,b) + prn(y,b) + prn(z,b) = _prn(x+y+z,b)"></p>
 
 <h2>Challenge Problems</h2>
 
 <table style='width:100%'><tr>
 <td><p class="expression" exp="longadd([17, 43, 67], 6)"></p></td>
 <td><p class="expression" exp="longadd([20, 40, 60], 7)"></p></td>
-<td><p class="expression" exp="longadd([17, 43, 77], 4)"></p></td>
-</tr><tr>
-<td><p class="expression" exp="longadd([17, 29, 34, 48], 5)"></p></td>
 <td><p class="expression" exp="longadd([17, 29, 34, 48], 9)"></p></td>
+</tr><tr>
 <td><p class="expression" exp="longadd([15, 17, 29, 30], 2)"></p></td>
+<td><p class="expression" exp="longsub([97, 55], 2)"></p></td>
+<td><p class="expression" exp="longsub([916, 530], 9)"></p></td>
 </tr></table>
+
 
 
 </div>
