unused css class

--- a/content/05_frombase10.html
+++ b/content/05_frombase10.html
@@ -19,7 +19,7 @@
 
 <h2>Steps for Converting a Number from <em>Base 10</em> to a <em>Different Base</em></h2>
 
-<p class="instruct"> Example: Convert \( 67_{(10)} \) to Base 5.</p>
+<p> Example: Convert \( 67_{(10)} \) to Base 5.</p>
 
 <p><strong>Step1:</strong> Draw a "Base 5 Conversion Table". Fill in the exponent values:
 <table class="base-chart" num=232_5 top=exponents demo=true></table>
