long division and frombase10 type 2

--- a/content/test.html
+++ b/content/test.html
@@ -18,8 +18,12 @@
 <div class="main">
 
 
-<p>Base-ic Calendar</p>
+<p class="expression" exp="longdiv(8372,5)"></p>
+<p class="expression" exp="longdiv(2005,5)"></p>
+<p class="expression" exp="longdiv(20842,21)"></p>
 
+
+<p>Base-ic Calendar</p>
 
 <div class="cal-box">
   <p class="cal-value">4</p>
@@ -57,6 +61,8 @@
 
 <p class="expression" exp="longadd(['55_6', '14_5', 20], 6)"></p>
 <p class="expression" exp="longadd(['55_6', '14_5', 20], 6)"></p>
+
+
 
 <p>Grid</p>
 
@@ -115,14 +121,32 @@
 \(
 \require{enclose}
 \begin{array}{r}
-                13  \\[-3pt]
-4 \enclose{longdiv}{52} \\[-3pt]
-     \underline{4}\phantom{2} \\[-3pt]
-                12  \\[-3pt]
-     \underline{12}
+  135                       \\[-3pt]
+  4 \enclose{longdiv}{540}  \\[-3pt]
+  \underline{4}\phantom{00} \\[-3pt]
+  14\phantom{0}             \\[-3pt]
+  \underline{12}\phantom{0} \\[-3pt]
+  20                        \\[-3pt]
+  \underline{20}\phantom{}  \\[-3pt]
+  0                         \\[-3pt]
+\end{array}
+\)
+<br><br>
+\(
+\require{enclose}
+\begin{array}{r}
+  135                       \\[-3pt]
+  4 \enclose{longdiv}{540}  \\[-3pt]
+  \\[-3pt]
+  \\[-3pt]
+  \\[-3pt]
+  \\[-3pt]
+  \\[-3pt]
+  \\[-3pt]
 \end{array}
 \)
 
+<hr>
 </p>
 
 
