added review material

--- a/content/07_frombase10_2.html
+++ b/content/07_frombase10_2.html
@@ -127,6 +127,45 @@
     exp="prn(x,b) - prn(y,b) - prn(z,b) = prn(x - y - z, b). \text{ Base is } _prn(b)"></li>
 </ol>
 
+<h2>Review</h2>
+<ol>
+
+
+<li class="expression series vspace1" len=4
+    exp="sub('{8}^$', n) = _prn(8**n)" ></li>
+
+<li class="expression vspace2" blank=8
+    vars="x=2018" exp="prn(x, 10) = _prn(x, 8)" ></li>
+
+<li class="expression series vspace1" len=4
+    exp="sub('{9}^$', n) = _prn(9**n)" ></li>
+
+<li class="expression vspace2" blank=8
+    vars="x='2018_9'" exp="prn(x, 9) = _prn(x, 10)" ></li>
+
+<li class="expression series vspace1" len=5
+    exp="_prn(2*n+1, 3)" hints=[0,1,2] ></li>
+
+<li class="expression vspace2" vars="x=val('7_8'); y=val('77_8'); z=val('777_8'); b=8;"
+    exp="prn(x,b) + prn(y,b) + prn(z,b) = _prn(x+y+z,b)"></li>
+
+<li class="expression vspace2" blank=8
+    vars="x=2018" exp="prn(x, 7) = _prn(x, 10)" ></li>
+
+<li class="expression vspace2" baseFormat=simple blank=8
+    vars="x='101010101_2'" exp="prn(x, 2) = _prn(x, 8)" ></li>
+
+<li class="expression vspace2" baseFormat=alpha blank=8
+    vars="x='4321_5'" exp="prn(x, 5) = _prn(x, 6)" ></li>
+
+<li class="expression vspace2" vars="x=val('1321_4'); y=val('123_4'); z=val('221_4'); b=4;"
+    exp="prn(x,b) - prn(y,b) + prn(z,b) = _prn(x-y+z,b)"></li>
+
+<li class="expression series vspace1" len=5
+    exp="_prn(6*n+12, 5)" hints=[0,1,2] ></li>
+
+</ol>
+
 </div>
 </body>
 </html>
