--- a/content/08_multiplication.html
+++ b/content/08_multiplication.html
@@ -50,7 +50,7 @@
 <p class="expression indent2" exp="_longmult('24_5', '32_5', 5, 'noSum')"></p>
 
 <p class="page-break"><strong>Step2:</strong> Add the 4 partial products. Remember to add in Base 5:</p>
-<p class="expression indent2" exp="longadd(['13_5', '40_5', '220_5', '1100_5'], 5)"></p>
+<p class="expression indent2" exp="_longadd(['13_5', '40_5', '220_5', '1100_5'], 5)"></p>
 
 <p>The answer you should get is: \( 1423_{(5)} \)  </p>
 
