fixed bug in answer

--- a/content/09_wordproblems.html
+++ b/content/09_wordproblems.html
@@ -42,9 +42,9 @@
     Answer: _prn( a/b )">
 </li> 
 
-<li class="expression vspace1" mathjax=functions vars="a=12; b=20; c=16; d=24;" blank=12
-    exp="Eurkia Games just got a collection Pokemon figures. Hadley, who just got her first job at Eurkia, must arrange them on the shelf from shortest to tallest. Pikachu is prn(c,6) inches tall, Rattata is prn(a,4) inches tall, Snivy is prn(d,5) inches tall and Oshawott is prn(b,3) inches tall. In what order does Hadley arrange the Pokemon?<br><br>
-    Answer: _echo('Rattata'), _echo('Oshawott'), _echo('Pikachu'), _echo('Snivy')">
+<li class="expression vspace1" mathjax=functions vars="a=12; b=16; c=20; d=24;" blank=12
+    exp="Eurkia Games just got a collection Pokemon figures. Hadley, who just got her first job at Eurkia, must arrange them on the shelf from shortest to tallest. Pikachu is prn(b,6) inches tall, Rattata is prn(a,4) inches tall, Snivy is prn(d,5) inches tall and Oshawott is prn(c,3) inches tall. In what order does Hadley arrange the Pokemon?<br><br>
+    Answer: _echo('Rattata'), _echo('Pikachu'), _echo('Oshawott'), _echo('Snivy')">
 </li>
 
 <li class="expression vspace1" mathjax=functions vars="a=9; b=13; c=10;" 
